@@ -105,6 +105,7 @@ operator << (ostream & out, ValueFlags flags)
    return out << ((flags & VF_marked)   ?  "M" : "-")
               << ((flags & VF_complete) ?  "C" : "-")
               << ((flags & VF_left)     ?  "&" : "-")
+              << ((flags & VF_dirty)    ?  "?" : "-")
               << ((flags & VF_arg)      ?  "A" : "-")
               << ((flags & VF_eoc)      ?  "E" : "-")
               << ((flags & VF_deleted)  ?  "∆" : "-")
